:lipstick: Fix overflow and homepage is done, content is posted.

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   padding: 0;
   user-select: none;
   color: white;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .base-component-pc {
@@ -110,4 +110,12 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+}
+
+.white {
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 16px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
